fix(navbar): Use overflow scroll instead of truncating text

--- a/themes/pure/assets/css/notablog.css
+++ b/themes/pure/assets/css/notablog.css
@@ -12,7 +12,7 @@
 }
 
 .inline-img-icon {
-  height: 1em;
+  height: 1.2em;
   vertical-align: sub;
 }
 
@@ -62,17 +62,22 @@
   z-index: 999;
   width: 100%;
   height: 50px;
-  padding: 0 20px;
+  padding: 10px 20px;
   /* Blur */
   background-color: rgba(255, 255, 255, 0.7);
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
+  overflow-x: auto;
 }
 
 .nav a {
   border-bottom: none;
-  min-width: 50px;
   text-align: center;
+}
+
+.nav a:last-child>.nav-btn {
+  /* .nav 20px + .nav-btn 6px */
+  padding-right: 26px;
 }
 
 .nav-btn {
@@ -84,18 +89,16 @@
   align-items: center;
 }
 
-.nav-btn>span:not(:first-child) {
-  margin-left: 6px;
+.nav-btn:hover {
+  background: rgba(55, 53, 47, 0.08);
 }
 
 .nav-btn>span {
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
-.nav-btn:hover {
-  background: rgba(55, 53, 47, 0.08);
+.nav-btn>span:not(:first-child) {
+  margin-left: 6px;
 }
 
 .nav-breadcrumb-slash {
